Update Blog “2021-02-02-artifact-2-1”

--- a/_data/blog/2021-02-02-artifact-2-1.md
+++ b/_data/blog/2021-02-02-artifact-2-1.md
@@ -1,6 +1,6 @@
 ---
 template: BlogPost
-path: /Artifact2
+path: /artifact2
 date: 2021-02-02T14:40:10.203Z
 title: Artifact 2
 thumbnail: /assets/20121025_AB_534-1 (1).png
