Update Blog “2021-02-02-artifact-2”

--- a/_data/blog/2021-02-02-artifact-2.md
+++ b/_data/blog/2021-02-02-artifact-2.md
@@ -1,6 +1,6 @@
 ---
 template: BlogPost
-path: /Artifact1
+path: /artifact1
 date: 2021-02-02T14:39:02.835Z
 title: Artifact 1
 thumbnail: /assets/20191014_AF_2629.png
