Update Blog “2021-02-02-artifact-5”

--- a/_data/blog/2021-02-02-artifact-5.md
+++ b/_data/blog/2021-02-02-artifact-5.md
@@ -3,7 +3,7 @@ template: BlogPost
 path: /artifact5
 date: 2021-01-29T23:44:33.285Z
 title: Artifact 5
-thumbnail: /assets/icatnight-scaled.jpg
+thumbnail: /assets/icatnight-.jpg
 ---
 Lorem ipsum dolor sit amet, saepe nostrum id eos, eam no augue noster platonem. Iisque postulant reprimique ex nam. Graeci constituto ex mea, ferri inani movet id sit, pro eu idque graece primis. Ut mel rebum deserunt sadipscing, pro omnis denique rationibus ut.
 
