--- a/_data/blog/2021-02-02-artifact-4.md
+++ b/_data/blog/2021-02-02-artifact-4.md
@@ -3,7 +3,7 @@ template: BlogPost
 path: /artifact4
 date: 2021-01-30T20:04:37.967Z
 title: Artifact 4
-thumbnail: /assets/20121025_AB_534-1 (3).png
+thumbnail: ''
 ---
 # Test
 
