Update Blog “2021-02-02-artifact-1”

--- a/_data/blog/2021-02-02-artifact-1.md
+++ b/_data/blog/2021-02-02-artifact-1.md
@@ -1,16 +1,14 @@
 ---
 template: BlogPost
-path: /artifact1
+path: /water-filter
 date: 2021-02-02T15:07:50.202Z
-title: Artifact 1
-thumbnail: /assets/20191014_AF_2629.png
+title: Designing a Sustainable Water Filtration System
+thumbnail: /assets/app-water-treatment-and-disinfection_Header_1.jpg
 ---
-Lorem ipsum dolor sit amet, saepe nostrum id eos, eam no augue noster platonem. Iisque postulant reprimique ex nam. Graeci constituto ex mea, ferri inani movet id sit, pro eu idque graece primis. Ut mel rebum deserunt sadipscing, pro omnis denique rationibus ut.
+I plan to design an alternative water filter in SketchUp. Most of the time water delivery is a problem when it comes to simple but effective water filtration system for developing countries. I am interested in pursuing this project as I want to learn more about CAD and to improve upon already existing water filtration devices. The goal of this project it to come up with a cost efficient but effective method for providing water to communities in need. The projects meets the criteria outlined because it will expose me to topic areas that I have never really explored before.  
 
-Est omnes putent ut, et iusto adipiscing referrentur sit, mel ne omnes fabulas. Sea viderer aliquid eu. Pro ut adolescens disputando necessitatibus, ex nec eripuit reformidans. Pri esse petentium ne, detracto tincidunt vix te.
 
-Ne mucius regione vulputate his, modus docendi quo et. Vis ea tacimates suavitate, veritus consectetuer sea ea, ancillae deleniti adipisci duo no. Pro te quando viderer, quo eu graeco honestatis, ullum pericula in per. Id ius illum repudiandae, no est rebum autem delenit. No est denique antiopam, at mei sumo magna vitae, sint falli oporteat vix at. Labores ullamcorper ne vis.
 
-Vel dicit apeirian quaerendum cu, an cibo electram periculis sed. Vim volumus philosophia consectetuer ei. Ea mentitum reprehendunt vel, sed persius detracto id. Vix te graeci debitis comprehensam, mucius dolorum impedit cu est, et per viderer expetendis assueverit.
+I believe that this project will take 10 hours. As I have never used CAD before. 
 
-At liber commodo aliquip per, vidit ludus altera cu qui. Vix commodo delectus id. Ut eum labitur maiorum, possit pericula maiestatis in eam. In eos putant labores disputando. Te suas lorem quaeque qui, id vidit populo lobortis eum. Et sed case quidam, id vel putant latine, essent admodum no est.
+Some helpful links: [CAD 101](https://learn.sketchup.com/track/sketchup-fundamentals-part-1)
