Update Blog “2020-03-02-test-post”

--- a/_data/blog/2020-03-02-test-post.md
+++ b/_data/blog/2020-03-02-test-post.md
@@ -1,9 +1,15 @@
 ---
 template: BlogPost
-path: /artifact3
+path: /ai
 date: 2021-01-31T06:15:00.000Z
-title: Artifact 3
-metaDescription: df sdf df
-thumbnail: /assets/20191014_AF_2705.png
+title: 'AI: Can it Help Reverse/Mitigate Effects of Climate Change?'
+metaDescription: ''
+thumbnail: /assets/960x0.jpg
 ---
-h dsui giuhjdfs udf ghihoiugigo hdfoijh io
+In this artifact I plan to dive into what AI is and it how it could possibly be used in an environmental context. AI is complex system so this artifact will be a blog type post that explores different situations where AI could be applied. I plan to do a search for peer reviewed articles to get a better idea of what AI is being used for, then come up with my own thoughts and ideas to see what I think could be done to help reduce the effects of climate change. 
+
+This is a great grey literature source: [Artificial Intelligence—A Game Changer for Climate Change and the Environment](https://blogs.ei.columbia.edu/2018/06/05/artificial-intelligence-climate-environment/). 
+
+
+
+I think that this project will take 5 hours.
