--- a/_data/blog/2021-02-02-artifact-4.md
+++ b/_data/blog/2021-02-02-artifact-4.md
@@ -1,18 +1,12 @@
 ---
 template: BlogPost
-path: /artifact4
+path: /sawyer
 date: 2021-01-30T20:04:37.967Z
-title: Artifact 4
-thumbnail: /assets/billy-huynh-W8KTS-mhFUE-unsplash.jpg
+title: Solving Environmental Problems With Sawyer
+thumbnail: /assets/download (1).jfif
 ---
-# Test
+I plan to use Sawyer to build a program that solves an environmental problem. I am going to use the builder in tools the Sawyer application along with the Sawyer SDK. At this point I am not sure what application I am going to use but I have a couple of ideas floating around. I also plan to use Sawyer's camera system to it can visually recognize an object and move it but making sure the problem it is solving is related to the environment. 
 
-Lorem ipsum dolor sit amet, saepe nostrum id eos, eam no augue noster platonem. Iisque postulant reprimique ex nam. Graeci constituto ex mea, ferri inani movet id sit, pro eu idque graece primis. Ut mel rebum deserunt sadipscing, pro omnis denique rationibus ut.
+I plan to use the docs that are available on the Sawyer website. 
 
-Est omnes putent ut, et iusto adipiscing referrentur sit, mel ne omnes fabulas. Sea viderer aliquid eu. Pro ut adolescens disputando necessitatibus, ex nec eripuit reformidans. Pri esse petentium ne, detracto tincidunt vix te.
-
-Ne mucius regione vulputate his, modus docendi quo et. Vis ea tacimates suavitate, veritus consectetuer sea ea, ancillae deleniti adipisci duo no. Pro te quando viderer, quo eu graeco honestatis, ullum pericula in per. Id ius illum repudiandae, no est rebum autem delenit. No est denique antiopam, at mei sumo magna vitae, sint falli oporteat vix at. Labores ullamcorper ne vis.
-
-Vel dicit apeirian quaerendum cu, an cibo electram periculis sed. Vim volumus philosophia consectetuer ei. Ea mentitum reprehendunt vel, sed persius detracto id. Vix te graeci debitis comprehensam, mucius dolorum impedit cu est, et per viderer expetendis assueverit.
-
-At liber commodo aliquip per, vidit ludus altera cu qui. Vix commodo delectus id. Ut eum labitur maiorum, possit pericula maiestatis in eam. In eos putant labores disputando. Te suas lorem quaeque qui, id vidit populo lobortis eum. Et sed case quidam, id vel putant latine, essent admodum no est.
+This project will take 10 hours to complete.
