Update Blog “2021-02-02-artifact-4”

--- a/_data/blog/2021-02-02-artifact-4.md
+++ b/_data/blog/2021-02-02-artifact-4.md
@@ -3,7 +3,7 @@ template: BlogPost
 path: /sawyer
 date: 2021-01-30T20:04:37.967Z
 title: Solving Environmental Problems With Sawyer
-thumbnail: /assets/download (1).jfif
+thumbnail: /assets/saywer.jfif
 ---
 I plan to use Sawyer to build a program that solves an environmental problem. I am going to use the builder in tools the Sawyer application along with the Sawyer SDK. At this point I am not sure what application I am going to use but I have a couple of ideas floating around. I also plan to use Sawyer's camera system to it can visually recognize an object and move it but making sure the problem it is solving is related to the environment. 
 
