--- a/_data/blog/2021-02-02-artifact-5.md
+++ b/_data/blog/2021-02-02-artifact-5.md
@@ -1,16 +1,12 @@
 ---
 template: BlogPost
-path: /artifact5
+path: /energy
 date: 2021-01-29T23:44:33.285Z
-title: Artifact 5
-thumbnail: /assets/icatnight-.jpg
+title: 'Interview: The Future of Sustainable Energy'
+thumbnail: /assets/00solar04-videoSixteenByNineJumbo1600.jpg
 ---
-Lorem ipsum dolor sit amet, saepe nostrum id eos, eam no augue noster platonem. Iisque postulant reprimique ex nam. Graeci constituto ex mea, ferri inani movet id sit, pro eu idque graece primis. Ut mel rebum deserunt sadipscing, pro omnis denique rationibus ut.
+In my final artifact I plan to interview someone from the energy industry and ask them questions about the future energy. For example: how will the energy industry make the transition from fossil fuels to sustainable types of energy. I will also want to know what techs are involved to make the change possible. I think it will also bring together some of the other technologies mentioned in this portfolio such as AI.  
 
-Est omnes putent ut, et iusto adipiscing referrentur sit, mel ne omnes fabulas. Sea viderer aliquid eu. Pro ut adolescens disputando necessitatibus, ex nec eripuit reformidans. Pri esse petentium ne, detracto tincidunt vix te.
+I plan to interview someone from NRG. 
 
-Ne mucius regione vulputate his, modus docendi quo et. Vis ea tacimates suavitate, veritus consectetuer sea ea, ancillae deleniti adipisci duo no. Pro te quando viderer, quo eu graeco honestatis, ullum pericula in per. Id ius illum repudiandae, no est rebum autem delenit. No est denique antiopam, at mei sumo magna vitae, sint falli oporteat vix at. Labores ullamcorper ne vis.
-
-Vel dicit apeirian quaerendum cu, an cibo electram periculis sed. Vim volumus philosophia consectetuer ei. Ea mentitum reprehendunt vel, sed persius detracto id. Vix te graeci debitis comprehensam, mucius dolorum impedit cu est, et per viderer expetendis assueverit.
-
-At liber commodo aliquip per, vidit ludus altera cu qui. Vix commodo delectus id. Ut eum labitur maiorum, possit pericula maiestatis in eam. In eos putant labores disputando. Te suas lorem quaeque qui, id vidit populo lobortis eum. Et sed case quidam, id vel putant latine, essent admodum no est
+I think this will take 3 hours to complete.
