Update Blog “2021-02-02-artifact-1”

--- a/_data/blog/2021-02-02-artifact-1.md
+++ b/_data/blog/2021-02-02-artifact-1.md
@@ -3,7 +3,7 @@ template: BlogPost
 path: /filter
 date: 2021-02-18T15:07:50.202Z
 title: Designing a Sustainable Water Filtration System With Fusion 360
-thumbnail: /assets/Screenshot 2021-02-18 181248.png
+thumbnail: /assets/app-water-treatment-and-disinfection_Header_1.jpg
 ---
 I have started to work on my water filter. I am still in the very early learning stage of learning Fusion 360, a CAD program for 3D design. I plan to have solar panels and pumps that push water through filters from a collection tank. So far I have designed the collection tank (see image). There's lots left to do! 
 
