Update Blog “2021-02-02-artifact-4”

--- a/_data/blog/2021-02-02-artifact-4.md
+++ b/_data/blog/2021-02-02-artifact-4.md
@@ -5,8 +5,6 @@ date: 2021-01-30T20:04:37.967Z
 title: Solving Environmental Problems With Sawyer
 thumbnail: /assets/saywer.jfif
 ---
-I plan to use Sawyer to build a program that solves an environmental problem. I am going to use the builder in tools the Sawyer application along with the Sawyer SDK. At this point I am not sure what application I am going to use but I have a couple of ideas floating around. I also plan to use Sawyer's camera system to it can visually recognize an object and move it but making sure the problem it is solving is related to the environment. 
+I have started to use Sawyer to complete this artifact. I plan to make Sawyer sort objects based on recycling code. 
 
-I plan to use the docs that are available on the Sawyer website. 
-
-This project will take 10 hours to complete.
+I have started to build the program in Intera, it will use the cameras to recognize the objects and identify if it can be recycled or not. I will have to configure the gripper arm again to make the gripper function correctly.
