--- a/_data/blog/2021-02-02-artifact-4.md
+++ b/_data/blog/2021-02-02-artifact-4.md
@@ -31,7 +31,11 @@ thumbnail: /assets/IMG_1767.jpg
 
 Hello world! Meet Sawyer. They help sort recycling! Sawyer uses its smarts to scan for objects and then make a determination of what to do next. In this case Sawyer looks at the object in front of them and determines if it can be recycled or not. It does this by using pre trained images. In our demo Sawyer looks for recycling labels, like the one below. 
 
+<center>
+
 ![](/assets/How2Recycle.jpg)
+
+</center>
 
 If that image is not found but Sawyer detects that something is there than it will throw it in the trash. This works by using a simple IF statement. For example, if the label is present then throw in recycling. ELSE throw it in the trash. 
 
