--- a/_data/blog/2021-02-02-artifact-5.md
+++ b/_data/blog/2021-02-02-artifact-5.md
@@ -1,12 +1,73 @@
 ---
 template: BlogPost
-path: /energy
+path: /website
 date: 2021-01-29T23:44:33.285Z
-title: 'Interview: The Future of Sustainable Energy'
-thumbnail: /assets/00solar04-videoSixteenByNineJumbo1600.jpg
+title: Designing a Sustainable Website
+thumbnail: /assets/Screen Shot 2021-02-28 at 8.04.26 PM.png
 ---
-In my final artifact I plan to interview someone from the energy industry and ask them questions about the future energy. For example: how will the energy industry make the transition from fossil fuels to sustainable types of energy. I will also want to know what techs are involved to make the change possible. I think it will also bring together some of the other technologies mentioned in this portfolio such as AI.  
+# Introduction
 
-I plan to interview someone from NRG. 
+The internet has opened countless doors for information sharing. The backbone of the internet is websites. To most people, all they do is open up their web browser and enter the URL that they want to visit. While this seems simple on the front-end it is very complex. There are many servers involved in the process of sending information to other servers before the end-user sees anything. These servers live in data centers. These centers are power-hungry. Based on estimates from 2019, data centers used 200 terawatt-hours of power (Kamiya 2020). These estimates are expected to increase especially with COVID demand and the expansion of the internet.
 
-I think this will take 3 hours to complete.
+So, as the internet expands how do we make it more efficient? One idea is to rethink how we store data such as websites. Until recently, I didn’t realize just how much data is stored on websites; some include servers, images, videos, text, and code. Those files can add up in size quickly putting more strain on servers. But how do we be energy conscious when making a website and what principles are not sustainable? There are a couple up and coming technologies that help web performance along with being more efficient on the server-side. In conjunction with explaining these new technologies, I am also going to go into detail about a website that I built that has sustainability in mind. But first, the technologies.
+
+# Edge Computing
+
+<center>
+
+![](/assets/Picture1.png)
+
+
+<html>
+<head>
+<style>
+table, td {
+  border: 1px solid black; 
+}
+</style>
+</head>
+<body>
+
+<table>
+  <tr>
+    <th>Figure 1. An example of an edge network (CloudFlare).</th> 
+  </tr>
+</table>
+
+</body>
+</html>
+</center>
+
+Normally cloud computing happens far away in a data center. With distance comes lag or latency. The more lag you have the slower the response times. What if we could bring the network as close as possible to the user; this very concept is possible thanks to edge computing. Edge computing is a networking philosophy focused on bringing computing as close to the source of data as possible to reduce latency and bandwidth use (CloudFlare). So, what is the edge? The edge is where things and people produce or consume that information (Shaw 2019 Nov 13). To use the edge, you must first create an edge network which is a type of edge device that provides an entry point into a network. Other edge devices include routers and routing switches (CloudFlare). Essentially, devices will be able to communicate once they are on edge. So, if a computer already has website data on it instead of relying on the server which could be thousands of miles away, we can just pull data from the edge; decreasing bandwidth which in turn will reduce power usage. Meaning, that the more devices that are a part of the edge will further reduce bandwidth usage. Figure 1 displays an edge network in action. With the edge device installed devices from network A and network B can talk to each other transmitting data. If a device from network B needs to pull up a website and someone on network A already has the files it will just pull data from network A.
+
+# Content Delivery Networks
+
+<center>
+
+![](/assets/Picture2.png)
+
+<html>
+<head>
+<style>
+table, td {
+  border: 1px solid black; 
+}
+</style>
+</head>
+<body>
+
+<table>
+  <tr>
+    <th>Figure 2. An example of an CDN (CloudFlare). The origin sever is where all the website data is stored. CDN’s are where snippets of website data are stored to speed up transit.   </th> 
+  </tr>
+</table>
+
+</body>
+</html>
+</center>
+
+A content delivery network (CDN) refers to a geographically distributed group of servers that work together to provide fast delivery of Internet content. A CDN allows for the quick transfer of assets needed for loading Internet content including HyperText Markup Language (HTML) pages, JavaScript files, cascading stylesheets (CSS), images, and videos (CloudFlare). A CDN is part of the network edge as it brings content from nearby sources instead of relying on the origin server where all the assets are stored. While CDN’s still require servers to run these servers are more efficient as they do not store all the code and assets. They only store cacheable and compressed content that is required for a fast time to live (TTL). CDN’s reduce the strain on networks spreading out the data essentially. Figure 2 provides a real-world example; end-users are traveling to the edge instead of the origin because all the data required to display the page is on the local DNS server. Thus, reducing bandwidth to the origin. However, an increase in CDN infrastructure size and client requests traffic volume cause an increase in energy consumption (Islam et al. 2017). Some recommend making a more sustainable network CDN resources have better utilization if CDN infrastructure is smaller (Islam et al. 2017). Meaning, that CDN’s are the most energy-efficient when there are fewer of them spread out strategically; so in this case more doesn’t exactly mean better.
+
+# Designing a Sustainable Website
+
+For this demonstration, I have built the following website: https://advtech.ictoxlab.com/. The website is running Gatsby, a static site generator. Static meaning that content is not dynamic and most likely runs on a content management system (CMS). The total website size is 641.12 Kilobytes. A small size website is required to reduce server load and to manage recourses more efficiently.
