Update Blog “2021-02-02-artifact-5”

--- a/_data/blog/2021-02-02-artifact-5.md
+++ b/_data/blog/2021-02-02-artifact-5.md
@@ -74,3 +74,16 @@ A content delivery network (CDN) refers to a geographically distributed group of
 # Designing a Sustainable Website
 
 For this demonstration, I have built the following website: https://advtech.ictoxlab.com/. The website is running Gatsby, a static site generator. Static meaning that content is not dynamic and most likely runs on a content management system (CMS). The total website size is 641.12 Kilobytes. A small size website is required to reduce server load and to manage recourses more efficiently.
+
+# Works Cited
+CloudFlare. What is edge computing? Cloudflare. [accessed 2021a Feb 28]. https://www.cloudflare.com/learning/serverless/glossary/what-is-edge-computing/.
+
+CloudFlare. What is a CDN edge server? Cloudflare. [accessed 2021b Feb 28]. https://www.cloudflare.com/learning/cdn/glossary/edge-server/.
+
+CloudFlare. What is a CDN? | How do CDNs work? Cloudflare. [accessed 2021 Feb 28]. https://www.cloudflare.com/learning/cdn/what-is-a-cdn/.
+
+Islam S ul, Pierson J-M, Javaid N. 2017. A Novel Utilization-aware Energy Consumption Model for Content Distribution Networks. Int J Web Grid Serv. 13(3):290–314. doi:10.1504/IJWGS.2017.085146.
+Kamiya G. 2020. Data Centres and Data Transmission Networks – Analysis. IEA. [accessed 2021 Feb 28]. https://www.iea.org/reports/data-centres-and-data-transmission-networks.
+
+Shaw K. 2019 Nov 13. What is edge computing and why it matters. Netw World. [accessed 2021 Feb 28]. https://www.networkworld.com/article/3224893/what-is-edge-computing-and-how-it-s-changing-the-network.html.
+
