Update Blog “2021-02-02-artifact-5”

--- a/_data/blog/2021-02-02-artifact-5.md
+++ b/_data/blog/2021-02-02-artifact-5.md
@@ -37,8 +37,6 @@ table, td {
 </html>
 </center>
 
-
-
 Normally cloud computing happens far away in a data center. With distance comes lag or latency. The more lag you have the slower the response times. What if we could bring the network as close as possible to the user; this very concept is possible thanks to edge computing. Edge computing is a networking philosophy focused on bringing computing as close to the source of data as possible to reduce latency and bandwidth use (CloudFlare). So, what is the edge? The edge is where things and people produce or consume that information (Shaw 2019 Nov 13). To use the edge, you must first create an edge network which is a type of edge device that provides an entry point into a network. Other edge devices include routers and routing switches (CloudFlare). Essentially, devices will be able to communicate once they are on edge. So, if a computer already has website data on it instead of relying on the server which could be thousands of miles away, we can just pull data from the edge; decreasing bandwidth which in turn will reduce power usage. Meaning, that the more devices that are a part of the edge will further reduce bandwidth usage. Figure 1 displays an edge network in action. With the edge device installed devices from network A and network B can talk to each other transmitting data. If a device from network B needs to pull up a website and someone on network A already has the files it will just pull data from network A.
 
 # Content Delivery Networks
@@ -67,8 +65,6 @@ table, td {
 </html>
 </center>
 
-
-
 A content delivery network (CDN) refers to a geographically distributed group of servers that work together to provide fast delivery of Internet content. A CDN allows for the quick transfer of assets needed for loading Internet content including HyperText Markup Language (HTML) pages, JavaScript files, cascading stylesheets (CSS), images, and videos (CloudFlare). A CDN is part of the network edge as it brings content from nearby sources instead of relying on the origin server where all the assets are stored. While CDN’s still require servers to run these servers are more efficient as they do not store all the code and assets. They only store cacheable and compressed content that is required for a fast time to live (TTL). CDN’s reduce the strain on networks spreading out the data essentially. Figure 2 provides a real-world example; end-users are traveling to the edge instead of the origin because all the data required to display the page is on the local DNS server. Thus, reducing bandwidth to the origin. However, an increase in CDN infrastructure size and client requests traffic volume cause an increase in energy consumption (Islam et al. 2017). Some recommend making a more sustainable network CDN resources have better utilization if CDN infrastructure is smaller (Islam et al. 2017). Meaning, that CDN’s are the most energy-efficient when there are fewer of them spread out strategically; so in this case more doesn’t exactly mean better.
 
 # Designing a Sustainable Website
@@ -76,14 +72,13 @@ A content delivery network (CDN) refers to a geographically distributed group of
 For this demonstration, I have built the following website: https://advtech.ictoxlab.com/. The website is running Gatsby, a static site generator. Static meaning that content is not dynamic and most likely runs on a content management system (CMS). The total website size is 641.12 Kilobytes. A small size website is required to reduce server load and to manage recourses more efficiently.
 
 # Works Cited
-CloudFlare. What is edge computing? Cloudflare. [accessed 2021a Feb 28]. https://www.cloudflare.com/learning/serverless/glossary/what-is-edge-computing/.
 
-CloudFlare. What is a CDN edge server? Cloudflare. [accessed 2021b Feb 28]. https://www.cloudflare.com/learning/cdn/glossary/edge-server/.
+CloudFlare. What is edge computing? Cloudflare. \[accessed 2021a Feb 28].
 
-CloudFlare. What is a CDN? | How do CDNs work? Cloudflare. [accessed 2021 Feb 28]. https://www.cloudflare.com/learning/cdn/what-is-a-cdn/.
+CloudFlare. What is a CDN edge server? Cloudflare. \[accessed 2021b Feb 28].
 
-Islam S ul, Pierson J-M, Javaid N. 2017. A Novel Utilization-aware Energy Consumption Model for Content Distribution Networks. Int J Web Grid Serv. 13(3):290–314. doi:10.1504/IJWGS.2017.085146.
-Kamiya G. 2020. Data Centres and Data Transmission Networks – Analysis. IEA. [accessed 2021 Feb 28]. https://www.iea.org/reports/data-centres-and-data-transmission-networks.
+CloudFlare. What is a CDN? | How do CDNs work? Cloudflare. \[accessed 2021 Feb 28].
 
-Shaw K. 2019 Nov 13. What is edge computing and why it matters. Netw World. [accessed 2021 Feb 28]. https://www.networkworld.com/article/3224893/what-is-edge-computing-and-how-it-s-changing-the-network.html.
+Islam S ul, Pierson J-M, Javaid N. 2017. A Novel Utilization-aware Energy Consumption Model for Content Distribution Networks. Int J Web Grid Serv. 13(3):290–314. doi:10.1504/IJWGS.2017.085146. Kamiya G. 2020. Data Centres and Data Transmission Networks – Analysis. IEA. \[accessed 2021 Feb 28].
 
+Shaw K. 2019 Nov 13. What is edge computing and why it matters. Netw World. \[accessed 2021 Feb 28].
