Update Blog “2021-02-02-artifact-5”

--- a/_data/blog/2021-02-02-artifact-5.md
+++ b/_data/blog/2021-02-02-artifact-5.md
@@ -3,7 +3,7 @@ template: BlogPost
 path: /website
 date: 2021-02-28T23:44:33.285Z
 title: Designing a Sustainable Website
-thumbnail: /assets/Screen Shot 2021-02-28 at 8.04.26 PM.png
+thumbnail: /assets/20191014_AF_2629.png
 ---
 # Introduction
 
