Update Blog “2021-02-02-artifact-5”

--- a/_data/blog/2021-02-02-artifact-5.md
+++ b/_data/blog/2021-02-02-artifact-5.md
@@ -20,8 +20,8 @@ So, as the internet expands how do we make it more efficient? One idea is to ret
 <html>
 <head>
 <style>
-table, td {
-  border: 1px solid black; 
+table, td,th {
+padding:5\px;
 }
 </style>
 </head>
