--- a/_data/blog/2021-02-02-artifact-5.md
+++ b/_data/blog/2021-02-02-artifact-5.md
@@ -3,13 +3,13 @@ template: BlogPost
 path: /website
 date: 2021-02-28T23:44:33.285Z
 title: Designing a Sustainable Website
-thumbnail: /assets/Screen Shot 2021-02-28 at 8.04.26 PM.png
+thumbnail: /assets/facebook-server-farm-arctic-lule-sweden-12.jpg
 ---
 # Introduction
 
 The internet has opened countless doors for information sharing. The backbone of the internet is websites. To most people, all they do is open up their web browser and enter the URL that they want to visit. While this seems simple on the front-end it is very complex. There are many servers involved in the process of sending information to other servers before the end-user sees anything. These servers live in data centers. These centers are power-hungry. Based on estimates from 2019, data centers used 200 terawatt-hours of power (Kamiya 2020). These estimates are expected to increase especially with COVID demand and the expansion of the internet.
 
-So, as the internet expands how do we make it more efficient? One idea is to rethink how we store data such as websites. Until recently, I didn’t realize just how much data is stored on websites; some include servers, images, videos, text, and code. Those files can add up in size quickly putting more strain on servers. But how do we be energy conscious when making a website and what principles are not sustainable? There are a couple up and coming technologies that help web performance along with being more efficient on the server-side. In conjunction with explaining these new technologies, I am also going to go into detail about a website that I built that has sustainability in mind. But first, the technologies.
+So, as the internet expands how do we make it more efficient? One idea is to rethink how we store data such as websites. Until recently, I didn’t realize just how much data is stored on websites; some include images, videos, text, and code. Those files can add up in size quickly putting more strain on servers. But how do we be energy conscious when making a website and what principles are not sustainable? There are a couple up and coming technologies that help web performance along with being more efficient on the server-side. In conjunction with explaining these new technologies, I am also going to go into detail about a website that I built that has sustainability in mind. But first, the technologies.
 
 # Edge Computing
 
@@ -65,11 +65,11 @@ table, td {
 </html>
 </center>
 
-A content delivery network (CDN) refers to a geographically distributed group of servers that work together to provide fast delivery of Internet content. A CDN allows for the quick transfer of assets needed for loading Internet content including HyperText Markup Language (HTML) pages, JavaScript files, cascading stylesheets (CSS), images, and videos (CloudFlare). A CDN is part of the network edge as it brings content from nearby sources instead of relying on the origin server where all the assets are stored. While CDN’s still require servers to run these servers are more efficient as they do not store all the code and assets. They only store cacheable and compressed content that is required for a fast time to live (TTL). CDN’s reduce the strain on networks spreading out the data essentially. Figure 2 provides a real-world example; end-users are traveling to the edge instead of the origin because all the data required to display the page is on the local DNS server. Thus, reducing bandwidth to the origin. However, an increase in CDN infrastructure size and client requests traffic volume cause an increase in energy consumption (Islam et al. 2017). Some recommend making a more sustainable network CDN resources have better utilization if CDN infrastructure is smaller (Islam et al. 2017). Meaning, that CDN’s are the most energy-efficient when there are fewer of them spread out strategically; so in this case more doesn’t exactly mean better.
+A content delivery network (CDN) refers to a geographically distributed group of servers that work together to provide fast delivery of Internet content. A CDN allows for the quick transfer of assets needed for loading Internet content including HyperText Markup Language (HTML) pages, JavaScript files, cascading stylesheets (CSS), images, and videos (CloudFlare). A CDN is part of the network edge as it brings content from nearby sources instead of relying on the origin server where all the assets are stored. While CDN’s still require servers to run these servers are more efficient as they do not store all the code and assets. They only store cacheable and compressed content that is required for a fast time to live (TTL). CDN’s reduce the strain on networks spreading out the data essentially. Figure 2 provides a real-world example; end-users are traveling to the edge instead of the origin because all the data required to display the page is on the local DNS server. Thus, reducing bandwidth to the origin. However, an increase in CDN infrastructure and client requests traffic volume cause an increase in energy consumption (Islam et al. 2017). Some recommend making a more sustainable network by making CDN infrastructure smaller (Islam et al. 2017). Meaning, that CDN’s are the most energy-efficient when there are fewer of them spread out strategically; so in this case more doesn’t exactly mean better.
 
 # Designing a Sustainable Website
 
-For this demonstration, I have built the following website: https://advtech.ictoxlab.com/. The website is running Gatsby, a static site generator. Static meaning that content is not dynamic and most likely runs on a content management system (CMS). The total website size is 641.12 Kilobytes. A small size website is required to reduce server load and to manage recourses more efficiently.
+For this demonstration, I have built the following website: https://advtech.ictoxlab.com/. The website is running Gatsby, a static site generator. Static meaning that content is not dynamic and most likely runs on a content management system (CMS). The total website size is 641.12 Kilobytes. A small size website is required to reduce server load and to manage recourses more efficiently. Finish this...
 
 # Works Cited
 
