Update Blog “2021-02-02-artifact-5”

--- a/_data/blog/2021-02-02-artifact-5.md
+++ b/_data/blog/2021-02-02-artifact-5.md
@@ -2,7 +2,7 @@
 template: BlogPost
 path: /website
 date: 2021-02-28T23:44:33.285Z
-title: Designing a Energy Efficient Website
+title: Designing a Energy-Efficient Website
 thumbnail: /assets/facebook-server-farm-arctic-lule-sweden-12.jpg
 ---
 # Introduction
@@ -67,11 +67,13 @@ table, td {
 
 A content delivery network (CDN) refers to a geographically distributed group of servers that work together to provide fast delivery of Internet content. A CDN allows for the quick transfer of assets needed for loading Internet content including HyperText Markup Language (HTML) pages, JavaScript files, cascading stylesheets (CSS), images, and videos (CloudFlare). A CDN is part of the network edge as it brings content from nearby sources instead of relying on the origin server where all the assets are stored. While CDN’s still require servers to run these servers are more efficient as they do not store all the code and assets. They only store cacheable and compressed content that is required for a fast time to live (TTL). CDN’s reduce the strain on networks spreading out the data essentially. Figure 2 provides a real-world example; end-users are traveling to the edge instead of the origin because all the data required to display the page is on the local DNS server. Thus, reducing bandwidth to the origin. However, an increase in CDN infrastructure and client requests traffic volume causes an increase in energy consumption (Islam et al. 2017). Some recommend making a more sustainable network by making CDN infrastructure smaller (Islam et al. 2017). Meaning, that CDN’s are the most energy-efficient when there are fewer of them spread out strategically; so in this case more doesn’t exactly mean better.
 
-# Designing a Sustainable Website
+# Designing an Energy-Efficient Website
 
 ![](/assets/Screen Shot 2021-03-14 at 6.47.51 PM.png)
 
-For this demonstration, I have built the following website: https://advtech.ictoxlab.com/. The website is running Gatsby, a static site generator. Static meaning that content is not dynamic and most likely runs on a content management system (CMS). The total website size is 641.12 Kilobytes. A small size website is required to reduce server load and to manage recourses more efficiently. The site is also using a CDN and utialzes edge comptuing. But the large advtnage of this site is it only builds a new version when nesscary. Other websites need to build themselves everytime a user requests it. So how do we do it? We use an intutuive service call Netlify (https://www.netlify.com/products/).
+For this demonstration, I have built the following website: https://advtech.ictoxlab.com/. The website is running Gatsby, a static site generator. Static meaning that content is not dynamic and most likely runs on a content management system (CMS). The total website size is 641.12 Kilobytes. A small size website is required to reduce server load and to manage recourses more efficiently. The site is also using a CDN and utilizes edge computing. But the large advantage of this site is it only builds a new version when necessary. Other websites need to build themselves every time a user requests it. So how do we do it? We use an intuitive service call Netlify (https://www.netlify.com/products/). Netlify uses edge computing a serverless technology to deploy a frontend website in their global network. So using edge tech we can be more energy conscious. Since Netlify uses a build command for the backend fewer resources are being used to produce the site. The backend of the site is stored in small configuration files located in GitHub, a file repository service. When the build command is executed the website is built using the files from GitHub. The site only builds when a change is detected reducing server load and energy usage while also providing a super-fast user experience. 
+
+
 
 # Works Cited
 
