Update Blog “2020-03-02-test-post”

--- a/_data/blog/2020-03-02-test-post.md
+++ b/_data/blog/2020-03-02-test-post.md
@@ -6,28 +6,30 @@ title: 'AI: Uses in Climate Science'
 metaDescription: ''
 thumbnail: /assets/960x0.jpg
 ---
-Artificial Intelligence (AI) has been rapidly growing over the years. It has been used in all disciplines from farming to finance. And its uses are expanding daily. But can it tackle on of the most difficult problems to date? We are in the middle of a climate crisis that we got ourselves into, can we get ourselves out of it? While I am certain that AI alone cannot get us out of the climate crisis, I know that it can help.  To start, AI has been a big player in data visualization. With AI we can recognize patterns and create relationships. A well know example is weather monitoring. We can use AI to predict storms that could be hard for humans to identify. AI has helped researchers achieve 89 to 99 percent accuracy in identifying tropical cyclones, weather fronts and atmospheric rivers, the latter of which can cause heavy precipitation (Cho 2018). Bering able to predict storms can create better risk management protocols to keep more people safe and it could act as an early detection system to warm people of inherit risk. 
+Artificial Intelligence (AI) has been rapidly growing over the years. It has been used in all disciplines from farming to finance. And its uses are expanding daily. But can it tackle one of the most difficult problems to date? 
 
+We are in the middle of a climate crisis that we got ourselves into, can we get ourselves out of it? While I am certain that AI alone cannot get us out of the climate crisis, I know that it can help. For some background, AI is the principle that computer systems can now undergo tasks that normally require human intervention to complete. Examples include speech recognition, decision-making, and vision. AI is different from regular computing in the sense of user inputs. Once you program an AI you no longer need to tell the computer what to do. It will use its intelligence to complete tasks. 
 
-Another application where AI could be helpful is in climate modeling. A common example of this is creating an Earth system model (ESM). ESMs are similar to weather forecasting but looks at environmental factors like greenhouse gas concertation to see how they interact with the atmosphere and how they induce climate change (Huntingford et al. 2019). ESMs can also explain ocean circulation, polar ice extents, and the carbon cycle (Huntingford et al. 2019). Until recently these models were carried out on a small scale but thanks to AI, we can connect multiple data sources and understand how factors measured by ESMs change but more importantly make predictions on how climate change will affect us so we can react promptly.
+To start, AI has been a big player in data visualization. With AI we can recognize patterns and create relationships. A well know example is weather monitoring. We can use AI to predict storms that could be hard for humans to identify. AI has helped researchers achieve 89 to 99 percent accuracy in identifying tropical cyclones, weather fronts, and atmospheric rivers, the latter of which can cause heavy precipitation (Cho 2018). Being able to predict storms can create better risk management protocols to keep more people safe, and it could act as an early detection system to warn people of inherent risk. 
 
+![](/assets/ClimateModel-637x437.jpg)
 
-But we yet to explore how we could slow down the effects of climate change. So far, we have only talked about how we can monitor those effects. One up and coming idea to use AI modeling to change the way that we cool buildings to then reduce overall energy usage, thus creating a negative feedback loop. Chakraborty et al. applied this idea to study whether small incremental changes to building cooling could reduce adverse climate effects. They found that there was a significant energy difference when using the AI model (Chakraborty et al. 2021). The model can also predict what will happen if no changes are made to building cooling. The use of AI in energy usage could heavily benefit usage if we know what the impact could be if we do not change our habits, especially if we do not change to renewables. It might make us more conscious of our actions. 
+Another application where AI could be helpful is climate modeling. A common example of this is creating an Earth System Model (ESM). ESMs are similar to weather forecasting but look at environmental factors like greenhouse gas concertation to see how they interact with the atmosphere and how they induce climate change (Huntingford et al. 2019). ESMs can also explain ocean circulation, polar ice extents, and the carbon cycle (Huntingford et al. 2019). Until recently these models were carried out on a small scale; but thanks to AI, we can connect multiple data sources and understand how factors measured by ESMs change, and more importantly make predictions on how climate change will affect us so we can react promptly. But we have yet to explore how we could slow down the effects of climate change. So far, we have only talked about how we can monitor those effects. One up-and-coming idea is to use AI modeling to change the way that we cool buildings reducing overall energy usage, by creating a negative feedback loop. Chakraborty et al. (2021) applied this idea to study whether small incremental changes to building cooling could reduce adverse climate effects. They found that there was a significant energy difference when using the AI model (Chakraborty et al. 2021). The model can also predict what will happen if no changes are made to building cooling. The use of AI in energy usage could greatly benefit usage if we know what the impact could be if we do not change our habits, especially if we do not change to renewable energy. It might make us more conscious of our actions. 
 
+Speaking of energy usage, one up-and-coming problem that influences the climate crisis is data centers. They are energy-intensive, and as demand increases so will the number of data centers which will create even more energy demand. But what if AI could control cooling operations within data centers to reduce the overall demand for the system? In this case, it would be controlling towers to smartly spread out cooling to the facility only when it needs it (Yang et al. 2019). Cooling is a vital part of data centers because the higher the temperature the less raw computing power you have, which in turn reduces productivity (Yang et al. 2019). In this case, server nodes and cooling towers would create a model to then produce the energy efficiency required for a greener facility. 
 
-Speaking of energy usage one up and coming problem that influences the climate crisis is data centers. They are energy intensive and as demand increase so will the number of data centers which will create even more energy demand. But what if AI could control cooling operation within data centers to reduce the overall demand on the system. In this case it would be controlling towers to smartly spread out cooling to facility only when it needs it (Yang et al. 2019). Cooling is a vital part of the data center because the higher the temperature the less raw compute power you have, which in turn reduces productivity (Yang et al. 2019). In this case server nodes and cooling towers would create a model to then produce the energy efficiency that is required for a greener facility. 
+![](/assets/AI-Gambit_Header_K0.jpg)
 
+As you can tell modeling is a large part of how AI comes into play, but for AI to help us win the climate war, we must take bold action to reduce and contain the effects of climate change. By reading the literature there seems to be a heavy focus on energy but little on how we can directly confront climate change. Instead, the factors that cause climate change like high energy usage. With that said, AI can still have a part in the climate fight, but we need to take caution when implementing AI. As previously mentioned, you need lots of computational bandwidth to be able to run advanced AI algorithms. So, is it worth it? Are all the resources that we are putting in which could speed up climate change be enough to slow it down? At this point, the literature does not come to a consensus on this issue, but we solve the climate crisis. 
 
-As you can tell modeling a large part of how AI comes into play but in order for AI to help us win the climate war, we must take bold action to reduce and contain the effects of climate change.  By reading the literature there seems to be a heavy focus on energy but little on how we can directly challenge climate change. Instead, the factors that cause climate change like high energy usage. 
-With that said, AI can still have a part in the climate fight, but we need to take caution when implementing AI. As mentioned in previous statements you need lots of computational bandwidth to be able to run advanced AI algorithms. So, the question that comes into play; is it worth it? Are all the resources that we are putting in which could speed up climate change be enough to slow it down. At this point in time the literature does not come to a consensus on this issue, but we do know that it will be a challenge that we face during the process of trying to solve the climate crisis. 
-Finally, the ethical concerns with AI and climate change. The first big question that needs to be answered is what type of data is being collected and who is collecting it? Will it be the government or private companies? Another concern will be access to climate change data generated by AI. Will it be public? As a society we need to answer these questions because not one person will be able to solve the climate crisis, we have to work as a team
+Finally, the ethical concerns with AI and climate change should be addressed. The first big question that needs to be answered is what type of data is being collected and who is collecting it? Will it be the government or private companies? Another concern will be access to climate change data generated by AI. Will it be public? As a society we need to answer these questions because no one person will be able to solve the climate crisis, we must work as a team. 
 
-Literature Cited\
+Literature Cited 
+
 Chakraborty D, Alam A, Chaudhuri S, Başağaoğlu H, Sulbaran T, Langar S. 2021. Scenario-based prediction of climate change impacts on building cooling energy consumption with explainable artificial intelligence. Appl Energy. 291:116807. doi:10.1016/j.apenergy.2021.116807. 
 
 Cho R. 2018. Artificial Intelligence—A Game Changer for Climate Change and the Environment. State Planet. \[accessed 2021 Apr 10]. https://blogs.ei.columbia.edu/2018/06/05/artificial-intelligence-climate-environment/. 
 
-Huntingford C, Jeffers ES, Bonsall MB, Christensen HM, Lees T, Yang H. 2019. Machine learning and artificial intelligence to aid climate change research and preparedness. Environ Res Lett. 14(12):124007. doi:10.1088/1748-9326/ab4e55.
-
+Huntingford C, Jeffers ES, Bonsall MB, Christensen HM, Lees T, Yang H. 2019. Machine learning and artificial intelligence to aid climate change research and preparedness. Environ Res Lett. 14(12):124007. doi:10.1088/1748-9326/ab4e55. 
 
 Yang J, Xiao W, Jiang C, Hossain MS, Muhammad G, Amin SU. 2019. AI-Powered Green Cloud and Data Center. IEEE Access. 7:4195–4203. doi:10.1109/ACCESS.2018.2888976.
