Update Blog “2020-03-02-test-post”

--- a/_data/blog/2020-03-02-test-post.md
+++ b/_data/blog/2020-03-02-test-post.md
@@ -12,13 +12,21 @@ We are in the middle of a climate crisis that we got ourselves into, can we get 
 
 To start, AI has been a big player in data visualization. With AI we can recognize patterns and create relationships. A well know example is weather monitoring. We can use AI to predict storms that could be hard for humans to identify. AI has helped researchers achieve 89 to 99 percent accuracy in identifying tropical cyclones, weather fronts, and atmospheric rivers, the latter of which can cause heavy precipitation (Cho 2018). Being able to predict storms can create better risk management protocols to keep more people safe, and it could act as an early detection system to warn people of inherent risk. 
 
+<center>
+
 ![](/assets/ClimateModel-637x437.jpg)
+
+</center>
 
 Another application where AI could be helpful is climate modeling. A common example of this is creating an Earth System Model (ESM). ESMs are similar to weather forecasting but look at environmental factors like greenhouse gas concertation to see how they interact with the atmosphere and how they induce climate change (Huntingford et al. 2019). ESMs can also explain ocean circulation, polar ice extents, and the carbon cycle (Huntingford et al. 2019). Until recently these models were carried out on a small scale; but thanks to AI, we can connect multiple data sources and understand how factors measured by ESMs change, and more importantly make predictions on how climate change will affect us so we can react promptly. But we have yet to explore how we could slow down the effects of climate change. So far, we have only talked about how we can monitor those effects. One up-and-coming idea is to use AI modeling to change the way that we cool buildings reducing overall energy usage, by creating a negative feedback loop. Chakraborty et al. (2021) applied this idea to study whether small incremental changes to building cooling could reduce adverse climate effects. They found that there was a significant energy difference when using the AI model (Chakraborty et al. 2021). The model can also predict what will happen if no changes are made to building cooling. The use of AI in energy usage could greatly benefit usage if we know what the impact could be if we do not change our habits, especially if we do not change to renewable energy. It might make us more conscious of our actions. 
 
 Speaking of energy usage, one up-and-coming problem that influences the climate crisis is data centers. They are energy-intensive, and as demand increases so will the number of data centers which will create even more energy demand. But what if AI could control cooling operations within data centers to reduce the overall demand for the system? In this case, it would be controlling towers to smartly spread out cooling to the facility only when it needs it (Yang et al. 2019). Cooling is a vital part of data centers because the higher the temperature the less raw computing power you have, which in turn reduces productivity (Yang et al. 2019). In this case, server nodes and cooling towers would create a model to then produce the energy efficiency required for a greener facility. 
 
+<center>
+
 ![](/assets/AI-Gambit_Header_K0.jpg)
+
+</center>
 
 As you can tell modeling is a large part of how AI comes into play, but for AI to help us win the climate war, we must take bold action to reduce and contain the effects of climate change. By reading the literature there seems to be a heavy focus on energy but little on how we can directly confront climate change. Instead, the factors that cause climate change like high energy usage. With that said, AI can still have a part in the climate fight, but we need to take caution when implementing AI. As previously mentioned, you need lots of computational bandwidth to be able to run advanced AI algorithms. So, is it worth it? Are all the resources that we are putting in which could speed up climate change be enough to slow it down? At this point, the literature does not come to a consensus on this issue, but we solve the climate crisis. 
 
