Update Blog “2021-02-02-artifact-1”

--- a/_data/blog/2021-02-02-artifact-1.md
+++ b/_data/blog/2021-02-02-artifact-1.md
@@ -3,10 +3,10 @@ template: BlogPost
 path: /filter
 date: 2021-02-18T15:07:50.202Z
 title: Designing a Sustainable Water Filtration System With Fusion 360
-thumbnail: /assets/app-water-treatment-and-disinfection_Header_1.jpg
+thumbnail: /assets/Water-Filter-Display.png
 ---
-I have started to work on my water filter. I am still in the very early learning stage of learning Fusion 360, a CAD program for 3D design. I plan to have solar panels and pumps that push water through filters from a collection tank. So far I have designed the collection tank (see image). There's lots left to do! 
+<center>
 
-The next steps are learning how to modify shapes within Fusion 360. 
+<iframe src="https://ithaca27.autodesk360.com/shares/public/SH56a43QTfd62c1cd968ca112a14e5b722e1?mode=embed" width="1024" height="768" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
 
-![](/assets/Screenshot 2021-02-18 181248.png)
+</center>
