Update Blog “2021-02-02-artifact-1”

--- a/_data/blog/2021-02-02-artifact-1.md
+++ b/_data/blog/2021-02-02-artifact-1.md
@@ -7,6 +7,6 @@ thumbnail: /assets/Water-Filter-Display.png
 ---
 <center>
 
-<iframe src="https://ithaca27.autodesk360.com/shares/public/SH56a43QTfd62c1cd968ca112a14e5b722e1?mode=embed" width="1024" height="768" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
+<iframe src="https://ithaca27.autodesk360.com/shares/public/SH56a43QTfd62c1cd968ca112a14e5b722e1?mode=embed" width="800" height="600" allowfullscreen="false" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
 
 </center>
