Update Blog “2021-02-02-artifact-1”

--- a/_data/blog/2021-02-02-artifact-1.md
+++ b/_data/blog/2021-02-02-artifact-1.md
@@ -7,6 +7,26 @@ thumbnail: /assets/Water-Filter-Display.png
 ---
 <center>
 
+<div class="video-responsive">
+
 <iframe src="https://ithaca27.autodesk360.com/shares/public/SH56a43QTfd62c1cd968ca112a14e5b722e1?mode=embed" width="800" height="600" allowfullscreen="false" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
+</div>
+<style>
+.video-responsive{
+    overflow:hidden;
+    padding-bottom:56.25%;
+    position:relative;
+    height:0;
+}
+.video-responsive iframe{
+    left:0;
+    margin-right:auto;
+    margin-left:auto;
+    top:0;
+    height:100%;
+    width:100%;
+    position:absolute;
+}
+</style>
 
 </center>
