Update Blog “2021-02-02-artifact-1”

--- a/_data/blog/2021-02-02-artifact-1.md
+++ b/_data/blog/2021-02-02-artifact-1.md
@@ -2,7 +2,7 @@
 template: BlogPost
 path: /filter
 date: 2021-04-30T14:07:50.202Z
-title: Designing a Sustainable Water Filtration System With Fusion 360
+title: Designing a Water Filtration System With Fusion 360
 thumbnail: /assets/Water-Filter-Display.png
 ---
 <center>
@@ -30,3 +30,21 @@ thumbnail: /assets/Water-Filter-Display.png
 </style>
 
 </center>
+
+<!--StartFragment-->
+
+# Introduction
+
+Introducing the gravity-based water filtration system! Meant for home use, this water filter system collects rainwater and turns it into clean drinking water. The best part, no power is required! The filter has two main components. The first being membrane filters and the second being a small pore-based ceramic filter.
+
+The filter functions via gravity, water enters the top where there is a 50-gallon storage tank and then slowly flows down to the clean water tank where it is now ready for use. Ideally, the bottom tank would be connected to a pipe that leads to the house. The filter does require maintenance; the ceramic filter and membranes must be washed under high pressure. For more water volume per hour, wider filtration units could be designed for larger homes or a situation where water use is more demanding.
+
+# A Real-World Application
+
+Clean water is essential for survival. The bad news is, we are running out of drinking water on a global scale. To be innovative we need to come up with bold solutions to solve the water crisis. The idea here is called micro-collection. The entire premise of this idea is to deploy a network of filters to reduce the burden of water usage around the world. Now, it's important to note that this solution is not perfect as it still requires a source, rain. The system is entirely weather-dependent. Which could prove a challenge in dry communities.
+
+# Wrapping Up
+
+There is simply not one answer to the water crisis. But to help solve it we need to come up with multiple solutions that can work together to reduce the stress of water use, this is just the beginning.
+
+<!--EndFragment-->
